Update Tags to Vue3